--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-callable API to determine basic data about MPs and constituencies on a given date
+Callable API to determine basic data about UK constituencies on a given date. Hoping to extend this to MP and electoral data eventually
