--- a/README
+++ b/README
@@ -1,1 +1,7 @@
 Callable API to determine basic data about UK constituencies on a given date. Hoping to extend this to MP and electoral data eventually
+
+Disclaimers:
+
+Needs updating to include 2010 election data
+
+Nowhere near finished yet!
